fixing overflow

--- a/src/views/category/category_component.scss
+++ b/src/views/category/category_component.scss
@@ -59,9 +59,7 @@ rating-container {
 .preview-card {
   cursor: pointer;
 }
-.product-category-cards{
-  overflow: hidden;
-}
+
 .product-card {
   overflow: hidden;
 
